--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"svelte-check": "^2.9.2",
 		"svelte-fa": "^3.0.3",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-simple-modal": "^1.4.5",
 		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
